	- added configure tests to detect Bull MPICH2
	- use Open MPI provided Fortran wrapper library 'libmpi_f77'
	- added functions 'MPI_Group_range_<incl|excl>' to Fortran MPI wrappers
	- use more portable 'nm' command instead of the BFD library to collect
	  symbol information for instrumentation with the GNU, Intel, PathScale,
	  and PGI 9 compiler
	- fixed detection of unique node id on MacOS platforms
	- fixed support for LAM/MPI
	- fixed build error: do not add objects from the static version of the
	  BFD library to the shared VT libraries, because the BFD objects might
	  be built without position independent code (PIC)
	- patched libtool to avoid a bug in detection of the PGI 10 compilers

5.8openmpi
	- updated version of internal OTF to 1.6.4openmpi
	  (see extlib/otf/ChangeLog)
	- added support for tracing calls to arbitrary third party libraries
	  The new tool 'vtlibwrapgen' can be used to generate a wrapper library.
	- extended the region filter mechanism to allow MPI-rank specific
	  filter directives
	- added support for automatic instrumentation with PGI 9 compiler using
	  its new compiler flag '-Minstrument'
	- added MPI-parallel trace unifier (vtunify-mpi)
	- disabled simultaneous support for multiple compiler instrumentation
	  types in one VampirTrace installation
	  (all known compiler instrumentation types for the compiler wrappers
	   (e.g. gnu,pgi,xl) are summarized by "compinst")
	- added wrapper script 'vtjava' which invoke the usual Java application
	  launcher with the necessary options for tracing
	- enhanced creating global definitions in vtunify
	- create a process group with the real node name on CrayXT platforms
	- fixed a bug which caused incomplete traces if using automatic instr.
	  for MPI/C++ applications on CrayXT platforms
	- fixed erroneous error messaging in libc tracing
	- fixed wrong order of attributes in 'vt_def_region'
	- fixed erroneous reading of input filter file in vtfilter

5.7